--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.zaxxer:HikariCP:7.0.2'
     compileOnly "jakarta.servlet:jakarta.servlet-api:6.0.0"
     implementation "org.mariadb.jdbc:mariadb-java-client:3.1.4"
     implementation "com.fasterxml.jackson.core:jackson-databind:2.20.0"
