--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ dependencies {
     compileOnly "jakarta.servlet:jakarta.servlet-api:6.0.0"
     implementation "org.mariadb.jdbc:mariadb-java-client:3.1.4"
     implementation "com.fasterxml.jackson.core:jackson-databind:2.20.0"
+    implementation 'at.favre.lib:bcrypt:0.10.2'
+    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'
 }
 
 test {
