[Feat] 채팅 컨트롤러, 서비스, 레포지토리 생성 및 데이터 통신 확인 Gradle, Jasonparser에 DATE 호환

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
     implementation 'com.zaxxer:HikariCP:7.0.2'
     compileOnly "jakarta.servlet:jakarta.servlet-api:6.0.0"
     implementation "org.mariadb.jdbc:mariadb-java-client:3.1.4"
